Implement security enhancements and error handling in Comic Converter
- Added SecurityUtils class for centralized security functions.
- Integrated file size and extension validation in ComicConverter.
- Implemented global error handling for unhandled errors and promise rejections.
- Enhanced file signature validation for AZW3 and other formats.
- Introduced memory usage tracking and rate limiting for file processing.
- Updated HTML to include Content Security Policy and other security headers.
- Refactored error handling to sanitize error messages before display.
- Removed deprecated test.html file and related test functions.
- Bumped version to 2.1.0 and updated author and license information in package.json.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; connect-src 'self'; font-src 'self'; object-src 'none'; media-src 'self'; frame-src 'none'; worker-src 'self'; child-src 'none'; form-action 'self'; base-uri 'self';">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
     <title>Awesome Comic Converter - AZW3 to CBZ</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -81,7 +86,11 @@
         </footer>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"
+            integrity="sha512-XMVd28F1oH/O71fzwBnV7HucLxVwtxf26XV8P4wPk26EDxuGZ91N8bsOttmnomcCD3CS5ZMRL50H0GgOHvegtg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
+    <script src="security-utils.js"></script>
     <script src="azw3-parser.js"></script>
     <script src="opf-parser.js"></script>
     <script src="app.js"></script>
