feat: Integrate Zip Worker for enhanced file processing in Comic Converter
- Added a Zip Worker to offload CBZ file creation, improving performance and responsiveness.
- Implemented error handling for worker initialization and fallback to main thread if unavailable.
- Introduced a 'Save All to Folder' feature using the File System Access API for direct file saving.
- Updated event listeners and UI elements to support new functionality, including a save button.
- Enhanced existing CBZ creation methods to utilize the worker for better efficiency.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     <button type="button" class="download-all-btn" id="downloadAllBtn" style="display: none;">
                         📦 Download All CBZ Files
                     </button>
+                     <button type="button" class="download-all-btn" id="saveAllBtn" style="display: none;">
+                         💾 Save All to Folder
+                     </button>
                     <button type="button" class="clear-btn" id="clearBtn">Process More Files</button>
                 </div>
             </div>
